--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FUNNYCOM</title>
+  <title>Jinju Kim's resume</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -12,7 +12,7 @@
   <div id="container">
     <header>
       <!-- 이름을 가장 위쪽에 -->
-      <h1>funnycom</h1>
+      <h1>Jinju Kim</h1>
       <h2>Frontend Developer</h2>
     </header>
     <!-- 내용 -->
@@ -25,23 +25,21 @@
 
         <!-- 자기 소개 -->
         <section>
+          <h2>소개(About)</h2>
+          <hr>
           <!-- 소개 내용은 <p>와 </p> 사이의 부분을 수정하세요 -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus debitis ipsam tempore quia ad. Ducimus sint vel porro eos debitis veniam quis, repellat odio neque, cum voluptate, natus doloremque!</p>
+          <p>프론트엔드 개발자라는 꽃을 피우기 위해 물과 양분을 먹고 쑥쑥 자라고 있습니다.</p>
 
           <!-- sns 링크 부분 -->
           <!-- href="" 부분의 링크와 내용을 수정하세요 -->
           <ul id="sns">
             <li>
               <i class="fa fa-envelope" aria-hidden="true"></i>
-              <a href="mailto:your-email@example.com">your-email@example.com</a>              
-        </li>
-            <li>
-              <i class="fab fa-github" aria-hidden="true"></i>
-              <a href="https://github.com/gh-username">gh-username</a>              
+              <a href="mailto:nane030@naver.com">nane030@naver.com</a>              
             </li>
             <li>
-              <i class="fab fa-linkedin" aria-hidden="true"></i>
-              <a href="https://linkedin.com/linkedin-username">linkedin-username</a>
+              <i class="fab fa-github" aria-hidden="true"></i>
+              <a href="https://github.com/jybong">jyubong</a>              
             </li>
             </ul>
         </section>
@@ -49,20 +47,20 @@
 
       <artile id="right">
         <section>
-          <h2>경력(work)</h2>
+          <h2>경력(work)<hr></h2>
           <!-- 경력 내용 수정 -->
             <dl>
-              <dt>회사 A : 2018 ~ 2020</dt>
-              <dd>회사에서 맡았던 업무</dd>
-              <dd>기타 사항</dd>
+              <dt>개발자 경력 없음</dt>
+              <dd>2023.01 ~ 독학</dd>
             </dl>
             <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
-              <dd>회사에서 맡았던 업무</dd>              
+              <dt>간호장교 경력</dt>
+              <dd>2018.09 ~ 2023.01 국군수도병원 등 수술간호장교</dd>
+              <dd>2017.03 ~ 2018.08 국군대전병원 외과병동, 응급실 근무</dd>        
             </dl>  
         </section>
         <section>
-          <h2>다룰 수 있는 기술(skills)</h2>
+          <h2>다룰 수 있는 기술(skills)<hr></h2>
           <!-- 자신있는 기술 수정 -->
           <p>HTML/CSS</p>
           <p>Javascritpt</p>
@@ -70,11 +68,10 @@
           <p>Github</p>
         </section>
         <section>
-          <h2>학력(education)</h2>
+          <h2>학력(education)<hr></h2>
           <!-- 학력 수정 -->
-          <p>2018.02 - XX 대학교 졸업(전공: 컴퓨터공학)</p>
-          <p>2012.02 - XX 고등학교 졸업</p>
-          <p> ... </p>
+          <p>2017.02 - 국군간호사관학교 졸업 (전공: 간호학)</p>
+          <p>2013.02 - 양산 제일 고등학교 졸업</p>
         </section>
       </artile>
     </main>
