--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
             <li>
               <i class="fab fa-github" aria-hidden="true"></i>
-              <a href="https://github.com/jybong">jyubong</a>              
+              <a href="https://github.com/jyubong">jyubong</a>              
             </li>
             </ul>
         </section>
